--- a/src/assets/form.css
+++ b/src/assets/form.css
@@ -1,6 +1,6 @@
 /* start forms styles */
 .form-label {
-  @apply text-sm font-semibold mb-1 block uppercase;
+  @apply text-sm font-semibold mb-1 block uppercase text-slate-700;
 }
 .form-group {
   @apply mb-4;
