--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './form.css';
+@import './helpers.css';
 
 @tailwind base;
 @tailwind components;
@@ -60,32 +61,11 @@
     calc(calc(var(--distance) * var(--unit)) * -1) calc(var(--blur) * var(--unit)) var(--color);
 }
 
-.btn-icon {
-  @apply px-2 py-1 rounded-md bg-white shadow-md border text-xs;
-}
-.icon-copy::before {
-  content: 'Copy 📋';
-}
-.icon-copy.success {
-  @apply bg-green-400 border-green-500;
-}
-.icon-copy.success::before {
-  content: 'Success 🎉';
-}
-
-.title {
-  @apply text-3xl font-bold mb-2;
-}
-.subtitle {
-  @apply text-gray-600;
-}
-
 pre code.hljs {
   white-space: pre-wrap;
 }
 
-.bulb-shadow {
-  transition: all 0.2s ease-in;
-  box-shadow: 0 0 35px 0px #ffee58;
-  border-radius: 99px;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;
 }
