added ability to click on preset to copy the code

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,6 +35,10 @@
   border-radius: var(--border-radius);
 }
 
+.card-preset-preview {
+  @apply bg-white rounded shadow p-6 min-h-60 flex items-center justify-center h-full;
+}
+
 /* manipulating the box shadown angle depending on the claases */
 :root.top-left {
   /* prettier-ignore */
